@@ -230,6 +230,7 @@
    changes
  - (djm) Recent Glibc includes an incompatible sys/queue.h. Treat it as 
    bogus in configure
+ - (djm) Use local sys/queue.h if necessary in ssh-agent.c
 
 20020121
  - (djm) Rework ssh-rand-helper:
@@ -7377,4 +7378,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1788 2002/01/22 12:51:42 djm Exp $
+$Id: ChangeLog,v 1.1789 2002/01/22 12:52:17 djm Exp $
